# prismic-backup

./: .editorconfig  .gitignore  .travis.yml  LICENSE  README.md  prismic-backup.cabal  stack.yaml
app/: Main.hs
src/: Http.hs  Prismic.hs  Storage.hs
