name:                prismic-backup
version:             1.0.0
synopsis:            CLI tool to backup a Prismic.io repository
description:         Please see README.md
homepage:            https://github.com/dsferruzza/prismic-backup#readme
license:             GPL
license-file:        LICENSE
author:              David Sferruzza
maintainer:          david.sferruzza@gmail.com
copyright:           2016 David Sferruzza
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Prismic, Http, Storage
  build-depends:       base >= 4.7 && < 5
                     , aeson == 0.9.0.1
                     , bytestring == 0.10.6.0
                     , containers == 0.5.6.2
                     , directory == 1.2.2.0
                     , filepath == 1.4.0.0
                     , HTTP == 4000.3.3
                     , lens == 4.13
                     , lens-aeson == 1.0.0.5
                     , regex-tdfa == 1.2.1
                     , text == 1.2.2.1
                     , utf8-string == 1.0.1.1
                     , vector == 0.11.0.0
                     , wreq == 0.4.1.0
  default-language:    Haskell2010

executable prismic-backup
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  build-depends:       base
                     , prismic-backup
                     , containers == 0.5.6.2
                     , optparse-generic == 1.1.0
                     , regex-compat == 0.95.1
                     , wreq == 0.4.1.0
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dsferruzza/prismic-backup
